# event-api/docs/swagger.json
@@ -1,4 +1,8 @@
 {
+    "schemes": [
+        "https",
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "API для управления событиями и аутентификации пользователей",
@@ -15,7 +19,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "api.tuserduser.online",
     "basePath": "/v1",
     "paths": {
         "/health": {
